# RtspPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/bugly/: BuglySymtabLog.txt  BuglyUploadLog.txt
app/src/androidTest/java/com/gosuncn/mpa/: ExampleInstrumentedTest.java  MainActivityTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gosuncn/mpa/: CompareActivity.java  MainActivity.java  MyApplication.java
app/src/main/java/com/gosuncn/mpa/player1/: FourScreenActivity.java  TestPlayer1Activity.java
app/src/main/java/com/gosuncn/mpa/player2/: TestFourScreenActivity.java  TestPlayer2Activity.java
app/src/main/java/com/gosuncn/mpa/player3/: TestFourPlayer3Activity.java  TestPlayer3Activity.java
app/src/main/res/layout/: activity_compare.xml  activity_four_screen.xml  activity_main.xml  activity_test_four_player3.xml  activity_test_four_screen.xml  activity_test_player1.xml  activity_test_player2.xml  activity_test_player3.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gosuncn/mpa/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_image/: build.gradle  readme.txt
lib_image/src/main/: AndroidManifest.xml
lib_image/src/main/cpp/: CMakeLists.txt
lib_image/src/main/cpp/image/: rgb2yuv.cpp  yuv2rgb.cpp
lib_image/src/main/cpp/include/: rgb2yuv.h  yuv2rgb.h
lib_image/src/main/cpp/jni/: imageutils_jni.cpp
lib_image/src/main/java/com/gosuncn/image/: ImageUtil.java  Logger.java
lib_image/src/main/res/values/: strings.xml
mplayer/: CMakeLists.txt  build.gradle  proguard-rules.pro
mplayer/src/androidTest/java/com/gosuncn/mplay/: ExampleInstrumentedTest.java
mplayer/src/main/: AndroidManifest.xml
mplayer/src/main/cpp/: native-lib.cpp  readme.txt  streamhandler-lib.cpp
mplayer/src/main/cpp/common/: CharUtil.cpp  CharUtil.h  GThread.cpp  GThread.h  Jpeg.cpp  Jpeg.h
mplayer/src/main/cpp/demo/: MediaPlayer.cpp  MediaPlayer.h  MediaPlayer2.cpp  MediaPlayer2.h
mplayer/src/main/cpp/ffmpeg3/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
mplayer/src/main/cpp/include/: log.h
mplayer/src/main/cpp/jni/: native-lib.cpp  streamhandler-lib.cpp
mplayer/src/main/cpp/libjpegturbo/include/: jpeglib.h
mplayer/src/main/cpp/player/: AudioPlayer.cpp  AudioPlayer.h  Codec.cpp  Codec.h  Convertor.cpp  Convertor.h  MediaPlayer.cpp  MediaPlayer.h  NativeCodec.cpp  NativeCodec.h  Optimize.cpp  Optimize.h  RGBHandler.cpp  RGBHandler.h  RGBRenderer.cpp  RGBRenderer.h  RetCode.cpp  RetCode.h  RtspPlayer.cpp  RtspPlayer.h  StreamTaker.cpp  StreamTaker.h  YUV420PRenderer.cpp  YUV420PRenderer.h  YUVHandler.cpp  YUVHandler.h
mplayer/src/main/java/com/gosuncn/mplay/: PlayerJNI.java  PlayerJNI3.java  RtspPlayer.java  RtspPlayer2.java  RtspPlayer3.java
mplayer/src/main/res/values/: strings.xml
mplayer/src/test/java/com/gosuncn/mplay/: ExampleUnitTest.java
